[package]
name = "get_lyric"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
ego-tree = "0.9.0"
maybe-async = "0.2.10"
reqwest = { version = "0.12.9", optional = true }
scraper = "0.21.0"
tokio = { version = "1.41.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
], optional = true }
ureq = { version = "3.0.3", optional = true }

[features]
default = ["client-reqwest"]

client-ureq = ["__sync", "dep:ureq"]
client-reqwest = ["__async", "dep:reqwest"]

# internal features 
__async = ["dep:tokio"]
__sync = ["maybe-async/is_sync"]
