[package]
name = "get_lyric"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
scraper = "0.22.0"
ego-tree = "0.10.0"
maybe-async = "0.2.10"
reqwest = { version = "0.12.12", optional = true }
tokio = { version = "1.43.0", optional = true, default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
ureq = { version = "3.0.3", optional = true }
clap = { version = "4.5.27", features = ["derive"], optional = true }

[features]
default = ["client-reqwest"]

cli = ["dep:clap"]

client-ureq = ["maybe-async/is_sync", "dep:ureq"]
client-reqwest = ["dep:tokio", "dep:reqwest"]

[[bin]]
name = "get_lyric"
required-features = ["cli", "client-ureq"]
